2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-auto-center-summary): `scroll-margin' isn't defined
	on XEmacs.

2012-04-10  Philipp Haselwarter  <philipp.haselwarter@gmx.de>  (tiny change)

	* gnus-sum.el (gnus-auto-center-summary): Set default to respect
	`scroll-margin'.

2012-04-10  Elias Oltmanns  <eo@nebensachen.de>  (tiny change)

	* gnus-cite.el (gnus-dissect-cited-text): A single line without
	citation prefix within a block of cited text should be considered part
	of that block *only* if it is a blank line.

2012-04-09  Chong Yidong  <cyd@gnu.org>

	* binhex.el, hashcash.el, uudecode.el:
	Remove * characters from the front of variable docstrings.

2012-04-05  Bastien Guerry  <bzg@altern.org>

	* color.el (color-lighten-name): Fix typo.

2012-04-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-find-fill-point): Remove unused code; don't break a line
	before kinsoku-bol characters nor within kinsoku-eol characters.

2012-03-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sync.el (gnus-topic-alist, gnus-group-topic)
	(gnus-topic-create-topic, gnus-topic-enter-dribble): Silence compiler.
	(gnus-sync-read): Use mapc instead of mapcar.

	* mm-archive.el: Require mm-decode for some macros.
	(gnus-recursive-directory-files, mailcap-extension-to-mime): Silence
	the byte compiler.
	(mm-archive-decoders): New function that returns the value of
	the mm-archive-decoders variable.

	* mm-decode.el: Don't require mm-archive; autoload mm-archive functions
	instead.
	(mm-dissect-singlepart): Use the function mm-archive-decoders.

	* nnimap.el (gnus-refer-thread-use-nnir):
	* nnmail.el (mail-send-and-exit): Silence the byte compiler.

2012-03-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-compat.el: Define `bound-and-true-p' for XEmacs.

2012-03-12  Peter Münster  <pmrb@free.fr>

	* gnus-demon.el (gnus-demon-timers): Now a plist (function -> timer).
	(gnus-demon-cancel): Ditto.