@@ -1,5 +1,9 @@
 2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-msg.el (gnus-summary-cancel-article): See what From header we
+	would have gotten if we posted to the group, and use that to compare
+	against the message we want to cancel (bug#10808).
+
 	* gnus-sum.el (gnus-auto-center-summary): `scroll-margin' isn't defined
 	on XEmacs.
 
